--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -31,7 +31,14 @@
     <p>
         {{form.submit()}}
     </p>
-
 </form>
+
+<!--Step 41 in the Workflow-->
+<p>
+    New User?
+    <a href="{{url_for("register")}}">
+        Click to Register!
+    </a>
+</p>
 
 {% endblock %}
