--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -25,6 +25,13 @@
                 Last seen on: {{user.last_seen}}
             </p>
             {% endif %}
+
+            <!--Step 53 in the Workflow-->
+            {% if user == current_user %}
+            <p>
+                <a href="{{ url_for('edit_profile') }}">Edit Profile</a>
+            </p>
+            {% endif %}
         </td>
     </tr>
 </table>
