--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,13 +4,13 @@
 {% block content %}
 
 <h1>Register</h1>
-<form action="" method="post">
+<form action="" method="post" novalidate>
     {{form.hidden_tag()}}
 
     <!--Username field-->
     <p>
         {{form.username.label}} <br>
-        {{form.username(size=32)}}
+        {{form.username(size=32)}} <br>
 
         <!-- To display the erros -->
         {% for error in form.username.errors %}
