--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -2,10 +2,14 @@
 <table>
     <tr valign="top">
         <td>
-            <img src="{{user.avatar(36)}}" alt="Gravatar">
+            <!-- user.avatar was changed to post.author.avatar, step 79 of the Workflow -->
+            <img src="{{post.author.avatar(36)}}" alt="Gravatar">
         </td>
         <td>
-            {{post.author.username}} says: <br>{{post.body}}
+            <!-- wrapping the username in <a> tag is step 79 of the Workflow -->
+            <a href="{{ url_for('user', username=post.author.username) }}">
+                {{post.author.username}}
+            </a> says: <br>{{post.body}}
         </td>
     </tr>
 
