--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,8 @@
     <div>
         Microblog:
         <a href="{{ url_for('index') }}">Main page</a>
+        <!-- Explore is the step 78 of the Workflow -->
+        <a href="{{ url_for('explore') }}">Explore</a>
         <!--Swich the login bar to logout, if the user is authenticated. Step 34-->
         {% if current_user.is_anonymous %}
         <a href="{{ url_for('login') }}">Login page</a>
