Steps 82-89 in the Workflow. Pagination

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,5 +34,19 @@
     {% include '_posts.html' %}
 {% endfor %}
 
+<!-- step 86 in the Workflow -->
+{% if prev_url %}
+    <a href="{{ prev_url }}">
+        Newer posts
+    </a>    
+{% endif %}
+
+<!-- step 86 in the Workflow -->
+{% if next_url %}
+    <a href="{{ next_url }}">
+        Older posts
+    </a>    
+{% endif %}
+
 <!--Block ends here-->
 {% endblock %}
