Sending emails. Workflow 90-102

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -41,4 +41,12 @@
     </a>
 </p>
 
+<!-- Step 92 in the Workflow -->
+<p>
+    Forgot password?
+    <a href="{{ url_for('reset_password_request') }}">
+        Click to reset it!
+    </a>
+</p>
+
 {% endblock %}
