--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,54 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'bootstrap/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    {% if Title %}
-    <title> {Title} - Microblog! </title>
-    {% else %}
-    <title> Welcome to Microblog! </title>
-    {% endif %}
-</head>
+{% block title %}
+    {% if title %}{{ title }} - Microblog{% else %}Welcome to Microblog{% endif %}
+{% endblock %}
 
-<body>
+{% block navbar %}
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{ url_for('index') }}">Microblog</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="{{ url_for('index') }}">Home</a></li>
+                    <li><a href="{{ url_for('explore') }}">Explore</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if current_user.is_anonymous %}
+                    <li><a href="{{ url_for('login') }}">Login</a></li>
+                    {% else %}
+                    <li><a href="{{ url_for('user', username=current_user.username) }}">Profile</a></li>
+                    <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+{% endblock %}
 
-    <!--Header of the page-->
-    <div>
-        Microblog:
-        <a href="{{ url_for('index') }}">Main page</a>
-        <!-- Explore is the step 78 of the Workflow -->
-        <a href="{{ url_for('explore') }}">Explore</a>
-        <!--Swich the login bar to logout, if the user is authenticated. Step 34-->
-        {% if current_user.is_anonymous %}
-        <a href="{{ url_for('login') }}">Login page</a>
-        {% else %}
-        <a href="{{url_for('user', username=current_user.username)}}">Profile</a>
-        <a href="{{url_for('logout')}}">Logout</a>
+{% block content %}
+    <div class="container">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-info" role="alert">{{ message }}</div>
+            {% endfor %}
         {% endif %}
+        {% endwith %}
+
+        {# application content needs to be provided in the app_content block #}
+        {% block app_content %}{% endblock %}
     </div>
-    <hr>
-
-    <!--This is the logic for displaying flash data from routes.py, login view-->
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-
-    <ul>
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {%  endfor %}
-    </ul>
-
-    {% endif %}
-    {% endwith %}
-
-    {% block content %}
-
-    <!--There will be stuff from index.html or other html files -->
-
-    {% endblock %}
-
-</body>
-
-</html>
+{% endblock %}
