--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,52 +1,17 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
-
-<h1>Sign in</h1>
-
-<form action="" method="post" novalidate>
-    {{form.hidden_tag()}}
+{% block app_content %}
+    <h1>Sign In</h1>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
+    <br>
+    <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
     <p>
-        {{form.username.label}} <br>
-        {{form.username(size=32)}} <br>
-
-        <!--Display errors for invalide input. Error messages come from DataRequired()-->
-        {% for error in form.username.errors %}
-        <span style="color: red">[{{error}}]</span>
-        {% endfor %}
+        Forgot Your Password?
+        <a href="{{ url_for('reset_password_request') }}">Click to Reset It</a>
     </p>
-    <p>
-        {{form.password.label}} <br>
-        {{form.password(size=32)}} <br>
-
-        <!--Display errors for invalide input. Error messages come from DataRequired()-->
-        {% for error in form.username.errors %}
-        <span style="color: red">[{{error}}]</span>
-        {% endfor %}
-    </p>
-    <p>
-        {{form.remember_me()}}
-        {{form.remember_me.label}}
-    </p>
-    <p>
-        {{form.submit()}}
-    </p>
-</form>
-
-<!--Step 41 in the Workflow-->
-<p>
-    New User?
-    <a href="{{url_for("register")}}">
-        Click to Register!
-    </a>
-</p>
-
-<!-- Step 92 in the Workflow -->
-<p>
-    Forgot password?
-    <a href="{{ url_for('reset_password_request') }}">
-        Click to reset it!
-    </a>
-</p>
-
 {% endblock %}
