--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,59 +1,11 @@
-<!--Everything here is Step 41 in the Workflow-->
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
-
-<h1>Register</h1>
-<form action="" method="post" novalidate>
-    {{form.hidden_tag()}}
-
-    <!--Username field-->
-    <p>
-        {{form.username.label}} <br>
-        {{form.username(size=32)}} <br>
-
-        <!-- To display the erros -->
-        {% for error in form.username.errors %}
-        <span style="color: red;">[{{error}}]</span>
-        {% endfor %}
-    </p>
-
-    <!--Email field-->
-    <p>
-        {{form.email.label}} <br>
-        {{form.email(size=64)}} <br>
-
-        <!-- To display the erros -->
-        {% for error in form.email.errors %}
-        <span style="color: red;">[{{error}}]</span>
-        {% endfor %}
-    </p>
-
-    <!--Password field-->
-    <p>
-        {{form.password.label}} <br>
-        {{form.password(size=32)}} <br>
-
-        <!-- To display the erros -->
-        {% for error in form.password.errors %}
-        <span style="color: red;">[{{error}}]</span>
-        {% endfor %}
-    </p>
-
-    <!--Repeat password field-->
-    <p>
-        {{form.password2.label}} <br>
-        {{form.password2(size=32)}} <br>
-
-        <!-- To display the erros -->
-        {% for error in form.password2.errors %}
-        <span style="color: red;">[{{error}}]</span>
-        {% endfor %}
-    </p>
-
-    <!--Submit field-->
-    <p>
-        {{form.submit()}}
-    </p>
-</form>
+{% block app_content %}
+    <h1>Register</h1>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
 {% endblock %}
